US - 9 - backend (edit models, add relations, edit tests) - frontend (edit navigation useHobbies)